update html page

--- a/go-service/html/homepage.html
+++ b/go-service/html/homepage.html
@@ -12,5 +12,12 @@
     <h3 id="button-time">Button clicked at: </h3>
     <h1 id="test-title">It is working</h1>
     <button id="test-button">Press me</button>
+    <br>
+    <br>
+    <label for="name">Frontend to backend</label>
+    <br>
+    <input type="text" id="name" placeholder="please insert your name..">
+    <button>Ask for data</button>
+    <h3 id="ask-time"></h3>
   </body>
 </html>
